--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body{
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: white;
+    background-color: rgb(243, 240, 240);
 }
 
 calculator{
